# 05_homework

./: CMakeLists.txt  README.md  Serializer.cpp  Serializer.h  main.cpp  main.h
.github/workflows/: release.yml  static.yml
